--- a/src/app/_background.scss
+++ b/src/app/_background.scss
@@ -33,7 +33,7 @@
   .modalRoot-1Kx4Hb,
   .container-3JTnYm.thin-1ybCId.scrollerBase-289Jih,
   .popoutContainer-1MXdqN,
-  .root-1gCeng {
+  .root-1gCeng:not(.modal-qgFCbT) {
     overflow: hidden !important;
     position: relative;
     border-radius: 3px;
